--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   url_launcher: ^5.5.2
   http: ^0.12.2
   jwt_decoder: ^1.0.1
+  bloc: ^6.0.2
+  flutter_bloc: ^6.0.5
   equatable: ^1.2.5
 
   # The following adds the Cupertino Icons font to your application.
