redesign almost done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ flutter:
           weight: 900
         - asset: assets/fonts/Montserrat-Bold.ttf
           weight: 700
+        - asset: assets/fonts/Montserrat-SemiBold.ttf
+          weight: 600
         - asset: assets/fonts/Montserrat-Regular.ttf
           weight: 300
 
