--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^4.3.2+2
   i18n_extension: ^1.4.5
   flutter_keyboard_size: ^0.1.2+2
+  simple_animations: ^2.2.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
