--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   i18n_extension: ^1.4.5
   flutter_keyboard_size: ^0.1.2+2
   simple_animations: ^2.2.2
+  flutter_animator: ^2.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
