--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_keyboard_size: ^0.1.2+2
   simple_animations: ^2.2.2
   flutter_animator: ^2.1.0
+  auto_animated: ^2.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
